--- a/GrpcProxy.Server/GrpcProxy.Server.csproj
+++ b/GrpcProxy.Server/GrpcProxy.Server.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -7,6 +7,11 @@
 
   <ItemGroup>
     <None Remove="appsettings.json" />
+    <None Remove="README" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Compile Include="README" />
   </ItemGroup>
 
   <ItemGroup>
