--- a/GrpcProxy.Server/GrpcProxy.Server.csproj
+++ b/GrpcProxy.Server/GrpcProxy.Server.csproj
@@ -11,7 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Compile Include="README" />
+    <Content Include="README" />
   </ItemGroup>
 
   <ItemGroup>
